tests/ui/types/struct_missing_field.ko
//@ compile-fail
module struct_missing {
    meta { purpose: "Missing struct field" }

    struct Point {
        x: Int,
        y: Int
    }

    fn main() {
        let p: Point = Point { x: 10 }  //~ ERROR: missing field
    }
}
